--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
             <tr>
 
               <td>APPOINTMENT ID</td>
-              <td>{{newdata.data[0].AppointmentId}}</td>
+              <td>{{appointmentDetails.data[0].AppointmentId}}</td>
 
 
 
@@ -25,7 +25,7 @@
             <tr>
 
               <td>PATIENT NAME</td>
-              <td>{{newdata.data[0].PatientName}}</td>
+              <td>{{appointmentDetails.data[0].PatientName}}</td>
 
 
             </tr>
@@ -33,7 +33,7 @@
             <tr>
 
               <td>PATIENT ID</td>
-              <td>{{newdata.data[0].patientID}}</td>
+              <td>{{appointmentDetails.data[0].patientID}}</td>
 
 
 
@@ -41,7 +41,7 @@
             <tr>
 
               <td>DOCTOR NAME </td>
-              <td>{{newdata.data[0].DoctorName}}</td>
+              <td>{{appointmentDetails.data[0].DoctorName}}</td>
 
 
 
@@ -49,7 +49,7 @@
             <tr>
 
               <td>DOCTOR ID</td>
-              <td>{{newdata.data[0].doctorID}}</td>
+              <td>{{appointmentDetails.data[0].doctorID}}</td>
 
 
 
@@ -57,15 +57,15 @@
             <tr>
 
               <td>ILLNESS</td>
-              <td>{{newdata.data[0].Illness}}</td>
+              <td>{{appointmentDetails.data[0].Illness}}</td>
 
 
 
             </tr>
             <tr>
 
-              <td>STSRT TIME</td>
-              <td>{{newdata.data[0].StartTime | date:'dd-MM-YY,h:mm:ss a'}}</td>
+              <td>START TIME</td>
+              <td>{{appointmentDetails.data[0].StartTime | date:'dd-MM-YY,h:mm:ss a'}}</td>
 
 
 
@@ -74,7 +74,7 @@
 
 
               <td>END TIME</td>
-              <td>{{newdata.data[0].EndTime| date:'dd-MM-YY,h:mm:ss a'}}</td>
+              <td>{{appointmentDetails.data[0].EndTime| date:'dd-MM-YY,h:mm:ss a'}}</td>
 
 
 
