--- a/src/styles.css
+++ b/src/styles.css
@@ -12,17 +12,47 @@ body { margin: 0;
         align-content: center;
         }
         
-    
-    
+        table,tr{
+            color: rgb(46, 43, 43);
+            margin-top: 30px;
+            text-align: center;
+            margin-left: auto;
+            margin-right: auto;
+            border: 2px solid;
+            border-style: double;
+            border-color: black !important;
+        
+        }
+
+    .table,col{
+        border: 2px solid;
+
+
+    }
+        .table,th{
+            color: rgb(46, 43, 43);
+            margin-top: 30px;
+            text-align: center;
+            margin-left: auto;
+            margin-right: auto;
+            border: 2px solid;
+            border-style: double;
+            border-color: black !important;
+        
+        }
     .table{
         margin-right: 200px;
-        height: 500px;
+        height: 300px;
         margin-top: 10px;
-        margin-bottom: 1200px;
-        width: 800px;
+        margin-bottom: 600px;
+        /* width: 800px; */
         /* display: none; */
-        background-color:blanchedalmond!important;
-        border-color:blanchedalmond;
+        /* background-color:rgb(201, 235, 245)!important; */
+        border-color:black !important;
+        border-style:double;
+        border: 2px solid;
+
+
 
     
         }
