--- a/src/styles.css
+++ b/src/styles.css
@@ -3,58 +3,14 @@
 html, body { height: 100%;
 color:black;
 }
-body { margin: 0;
-    font-size: larger;
+body { 
+    font-size: large;
      font-family: Roboto, "Helvetica Neue", sans-serif; }
 
-    .container{
-        height: 50%;
-        align-content: center;
-        }
-        
-        table,tr{
-            color: rgb(46, 43, 43);
-            margin-top: 30px;
-            text-align: center;
-            margin-left: auto;
-            margin-right: auto;
-            border: 2px solid;
-            border-style: double;
-            border-color: black !important;
-        
-        }
-
-    .table,col{
-        border: 2px solid;
-
-
-    }
-        .table,th{
-            color: rgb(46, 43, 43);
-            margin-top: 30px;
-            text-align: center;
-            margin-left: auto;
-            margin-right: auto;
-            border: 2px solid;
-            border-style: double;
-            border-color: black !important;
-        
-        }
-    .table{
-        margin-right: 200px;
-        height: 300px;
-        margin-top: 10px;
-        margin-bottom: 600px;
-        /* width: 800px; */
-        /* display: none; */
-        /* background-color:rgb(201, 235, 245)!important; */
-        border-color:black !important;
-        border-style:double;
-        border: 2px solid;
-
-
-
-    
-        }
-    
-    
+     table {
+        width: 950px;
+      }
+      table, th, td {
+        border: 1px solid;
+        width: fit-content;
+      }
